--- a/src/assets/style/CardLand.css
+++ b/src/assets/style/CardLand.css
@@ -1,6 +1,7 @@
 .card {
     width: 90%;
     max-width: 330px;
+    min-width: 330px;
     margin: 10px;
     padding: 10px;
     box-shadow: 6px 7px 12px 0px rgba(0,0,0,0.75);
