--- a/src/assets/style/MainUsers.css
+++ b/src/assets/style/MainUsers.css
@@ -17,7 +17,7 @@
 .tab {
     margin: 0 10px;
     padding: 3px 10px;
-    background-color: #101AB5;
+    background-color: #292a36;
     border-radius: 4px 4px 0 0;
     text-decoration: none;
     color: white
