--- a/src/assets/style/MainAdmin.css
+++ b/src/assets/style/MainAdmin.css
@@ -1,4 +1,4 @@
-.mainusers-container {
+.mainAdmin-container {
   margin: 30px 0 50px 0;
 }
 .card-container {
@@ -9,14 +9,14 @@
 .tabs {
   padding-left: 45px;
   height: 50px;
-  background-color: aquamarine;
+  background-color: rgb(0, 0, 255);
   display: flex;
   align-items: flex-end;
 }
 .tab {
   margin: 0 10px;
   padding: 3px 10px;
-  background-color: #292a36;
+  background-color: #2f313c;
   border-radius: 4px 4px 0 0;
   text-decoration: none;
   color: white;
