--- a/src/assets/style/User.css
+++ b/src/assets/style/User.css
@@ -1,6 +1,14 @@
-.person-by-user {
-  border: 1px solid rgb(41, 28, 184);
+.users-view-container {
+  background-color: lightgray;
+  display: flex;
+  text-align: left;
+  border: 1px solid gray;
   border-radius: 5px;
-  padding: 5px;
-  margin: 5px 0;
+  padding: 10px;
+  padding-right: 40px;
+  margin: 5px 5px;
+}
+.land-list-container {
+  font-weight: 500;
+  color: darkred;
 }
