--- a/src/assets/style/Expense.css
+++ b/src/assets/style/Expense.css
@@ -4,15 +4,18 @@
   margin: 10px;
   padding: 10px 20px 0 0;
 }
-
-.late {
+.expense-element.dark {
+  color: var(--color-light)
+}
+.expense-element.late {
   background-color: darkred;
   color: white;
 }
-.to-pay {
+.expense-element.to-pay {
   background-color: darkgreen;
   color: white;
 }
-.paid-late {
+.expense-element.paid-late {
   background-color: orange;
 }
+
