--- a/src/assets/style/MainAdmin.css
+++ b/src/assets/style/MainAdmin.css
@@ -1,5 +1,8 @@
 .mainAdmin-container {
   margin: 30px 0 50px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .card-container {
   display: flex;
@@ -9,7 +12,7 @@
 .tabs {
   padding-left: 45px;
   height: 50px;
-  background-color: rgb(0, 0, 255);
+  /* background-color: rgb(0, 0, 255); */
   display: flex;
   align-items: flex-end;
 }
@@ -21,7 +24,22 @@
   text-decoration: none;
   color: white;
 }
-.active {
+.active-style {
   background-color: #f5f5f5;
   color: black;
+}
+
+.tabs.dark {
+  background-color: var(--background-dark);
+}
+.tab.dark {
+  background-color: var(--background-dark2);
+  color: var(--color-dark);
+}
+.tab.dark.active-style{
+  background-color: var(--background-medium);
+  color: var(--color-dark);  
+}
+.mainAdmin-container.dark {
+  background-color: var(--background-medium);
 }
