--- a/src/assets/style/TableExpense.css
+++ b/src/assets/style/TableExpense.css
@@ -26,6 +26,11 @@
 }
 td {
   white-space: nowrap;
+  text-align: center;
+}
+th {
+  white-space: nowrap;
+  text-align: center;
 }
 .table {
   display: inline-table;
