--- a/src/assets/style/TableExpense.css
+++ b/src/assets/style/TableExpense.css
@@ -22,7 +22,10 @@
 }
 
 .table-container {
-  width: 70vw;
+  width: 80%;
+  min-width: 500px;
+  /* width: 70vw; */
+  max-width: 900px;
 }
 td {
   white-space: nowrap;
@@ -37,4 +40,9 @@ th {
 }
 .late-row {
   background-color: lightcoral;
+}
+
+.active-row {
+  font-weight: 500;
+  background-color: rgba(0, 100, 0, 0.155);
 }
